--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.2",
+    "swiper": "^11.1.14",
     "tailwindcss": "^3.4.12"
   },
   "devDependencies": {
